@@ -2,7 +2,6 @@ Short term todo list for 1.23.0:
 
 - separate SMSD
 - support for void* parameter for user data in callback functions
-- logging in gammu using custom function
 - SMSD logging to syslog
 
 Optional:
