@@ -31,13 +31,17 @@ typedef enum {
 	DL_TEXTERRORDATE	/**< Only errors			*/
 } Debug_Level;
 
-struct _DebugInfo {
+struct _GSM_Debug_Info {
 	Debug_Level	dl; /**< Level of messages to display */
 	FILE		*df; /**< File used for debug messages output */
 	bool        	use_global; /**< Whether to use global debug structure instead of this one. */
 	const char	*coding; /**< Encoding used in console */
 	bool		was_lf; /**< Has there already been new line */
 	bool		closable; /**< Whether Gammu can close the file when it is no longer needed for debug output. */
+    /**
+     * Function which performs logging, in case it is set, no file logging happens.
+     */
+    GSM_Log_Function    log_function;
 };
 
 
